added: download Raffles as excel FILE
