# docs/swagger.json
@@ -3676,6 +3676,50 @@
                 }
             }
         },
+        "/raffle/download": {
+            "get": {
+                "description": "download raffles to excel",
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "raffle"
+                ],
+                "operationId": "downloadRaffles",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
         "/raffle/{id}": {
             "get": {
                 "description": "get raffle by id",
